--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,16 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+:root {
+    --ion-font-family : arial, helvetica, sans-serif;
+    --ion-text-color : #555;
+}
+
+h1 {
+    text-align: center;
+    color: #555;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 1.1em;
+  }
