--- a/src/app/pages/produits/produits.page.html
+++ b/src/app/pages/produits/produits.page.html
@@ -1,13 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/accueil"></ion-back-button>
+      <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Mot de passe oublié</ion-title>
+    <ion-title>Catalogue des produits</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
 </ion-content>
-<app-footer></app-footer>
