--- a/src/app/pages/qui/qui.page.html
+++ b/src/app/pages/qui/qui.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/accueil"></ion-back-button>
+      <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-title>Qui sommes-nous ?</ion-title>
   </ion-toolbar>
