--- a/src/app/pages/accueil/accueil.page.scss
+++ b/src/app/pages/accueil/accueil.page.scss
@@ -6,11 +6,12 @@ ion-input {
 
 
 ion-img {
-    max-width: 100px;
+    max-width: 200px;
     max-height: auto;
     margin: 5px 5px 10px 5px;
 }
 
-ion-icon {
+#cog {
     font-size: 24px;
-  }
+    margin-right: 10px;
+}
