--- a/src/app/pages/mentions-legales/mentions-legales.page.html
+++ b/src/app/pages/mentions-legales/mentions-legales.page.html
@@ -1,12 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/accueil"></ion-back-button>
+      <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Catalogue des produits</ion-title>
+    <ion-title>Mentions légales</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-text>Mentions légales</ion-text>
 </ion-content>
