--- a/src/app/pages/oubli/oubli.page.html
+++ b/src/app/pages/oubli/oubli.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/accueil"></ion-back-button>
+      <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Adhérer à l'association</ion-title>
+    <ion-title>Mot de passe oublié</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  Page adhérer à l'association.
+
 </ion-content>
 <app-footer></app-footer>
