--- a/src/app/pages/cgv/cgv.page.html
+++ b/src/app/pages/cgv/cgv.page.html
@@ -1,12 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Conditions générales de vente</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
   <ion-text>Conditions générales de vente</ion-text>
 </ion-content>
+<app-footer></app-footer>
