--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -1,13 +1,7 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="danger">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Accès administrateur</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
+  <h1>Accès administrateur</h1>
   <ion-item detail routerLink="/produits">
     <ion-label>
       Accéder au catalogue des produits
@@ -36,20 +30,29 @@
         </ion-item>
 
         <ion-item>
-          <ion-label position="stacked">Description</ion-label>
+          <ion-label position="stacked" spellcheck="true">Description</ion-label>
           <ion-textarea></ion-textarea>
         </ion-item>
 
         <ion-item>
           <ion-label position="stacked">Prix *</ion-label>
-          <ion-input></ion-input>
+          <ion-input type="number"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="stacked"> Catégorie *</ion-label>
           <ion-select placeholder="Votre choix">
-            <ion-select-option value="viande">viande</ion-select-option>
-            <ion-select-option value="cosmetiques">cosmetiques</ion-select-option>
+            <ion-select-option value="viande">Viande</ion-select-option>
+            <ion-select-option value="cosmetiques">Cosmétiques</ion-select-option>
+            <ion-select-option value="epicerie_salee">Épicerie salee</ion-select-option>
+            <ion-select-option value="fruits_et_legumes">Fruits et légumes</ion-select-option>
+            <ion-select-option value="entretien_de_la_maison">Entretien de la maison</ion-select-option>
+            <ion-select-option value="boissons">Boissons</ion-select-option>
+            <ion-select-option value="boulangerie">Boulangerie-pâtisserie</ion-select-option>
+            <ion-select-option value="produits_laitiers">Produits laitiers</ion-select-option>
+            <ion-select-option value="epicerie_sucree">Épicerie sucrée</ion-select-option>
+            <ion-select-option value="fleurs">Fleurs</ion-select-option>
+            <ion-select-option value="livres">Livres</ion-select-option>
           </ion-select>
         </ion-item>
 
@@ -60,7 +63,7 @@
 
         <ion-item>
           <ion-label position="stacked">Nombre de produits en stock</ion-label>
-          <ion-input></ion-input>
+          <ion-input type="number"></ion-input>
         </ion-item>
 
         <ion-item>
@@ -86,15 +89,15 @@
 
         <ion-item>
           <ion-label>Publié</ion-label>
-          <ion-checkbox color="danger" checked="true"></ion-checkbox>
+          <ion-checkbox checked="true"></ion-checkbox>
         </ion-item>
 
         <ion-item>
           <ion-label>Mis en avant</ion-label>
-          <ion-checkbox color="danger"></ion-checkbox>
+          <ion-checkbox></ion-checkbox>
         </ion-item>
 
-        <ion-button type="submit" expand="full" shape="round" color="danger">Ajouter</ion-button>
+        <ion-button type="submit" expand="full" shape="round">Ajouter</ion-button>
 
       </ion-col>
     </ion-row>
