--- a/src/app/pages/produits/produits.page.html
+++ b/src/app/pages/produits/produits.page.html
@@ -1,12 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Catalogue des produits</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
-
+<h1>Tous nos produits</h1>
 </ion-content>
+<app-footer></app-footer>
