--- a/src/app/pages/qui/qui.page.html
+++ b/src/app/pages/qui/qui.page.html
@@ -1,27 +1,20 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="primary">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Qui sommes-nous ?</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <strong>Merci Babeth !</strong> C’est l’histoire d’une habitante du quartier souhaitant dynamiser la vie de son
-        cher et tendre quartier, le quartier Sainte-Elisabeth au Blosne. Le tout en privilégiant <strong>un mode de vie
-          sain</strong> et un <strong>mode de consommation durable</strong> et éco-responsable.
-        Prenant son courage à deux mains, elle agit et créée l’association Merci Babeth ! Son objectif principal est de
-        faire partager au plus grand nombre sa passion pour les produits locaux et de saison. L’association soutient les
-        <strong>producteurs locaux</strong> en s’approvisionnant majoritairement auprès de producteurs bretons mais
-        aussi auprès de producteurs dans toute la France pour certains produits que nous ne trouvons pas dans notre
-        chère et tendre Bretagne.
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
+<ion-content class="ion-text-center">
+  <ion-text>
+    <h1>Qui sommes-nous ?</h1>
+    <p>
+      <strong>Merci Babeth !</strong> C’est l’histoire d’une habitante de Sainte-Elisabeth au Blosne souhaitant dynamiser la vie de son
+      cher et tendre quartier. Le tout en privilégiant <strong>un mode de vie
+        sain</strong> et un <strong>mode de consommation durable</strong> et éco-responsable.</p>
+    <ion-img id="quartier" src="../assets/img/quartier.jpg"></ion-img>
+    <p>Prenant son courage à deux mains, elle agit et créée l’association Merci Babeth ! Son objectif principal est de
+      faire partager au plus grand nombre sa passion pour les produits locaux et de saison.</p>
+      <p>L’association soutient les
+      <strong>producteurs locaux</strong> en s’approvisionnant majoritairement auprès de producteurs bretons mais
+      aussi auprès de producteurs dans toute la France pour certains produits que nous ne trouvons pas dans notre
+      chère et tendre Bretagne.
+    </p>
+  </ion-text>
 </ion-content>
 <app-footer></app-footer>
