--- a/src/app/pages/rayons/rayons.page.html
+++ b/src/app/pages/rayons/rayons.page.html
@@ -1,9 +1,6 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>{{ rayons }}</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
 <ion-content>
 
 </ion-content>
+<app-footer></app-footer>
